# bolo-landing-page-backend

./: README.md  pyproject.toml  railway.json  railway.toml  run.py
api/: .env  app.py  main.py  requirements.txt  run.py
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
